# student_management_system

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: student.h
src/: main.cpp  student.cpp  student_test.cc
